--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ iced = { version = "0.10", features = ["image"] }
 image = "0.24"
 walkdir = "2.4"
 kamadak-exif = "0.5"
-rayon = "1.8" 
+rayon = "1.8"
+rfd = "0.11" 
